==> freddy120/LSM9DS0_tivacLaunchpad/LSM9DS0_tiva.c <==
#include <stdint.h>
#include <stdbool.h>
#include <math.h>
#include "inc/tm4c123gh6pm.h"
#include "inc/hw_memmap.h"
#include "inc/hw_types.h"
#include "inc/hw_i2c.h"
#include "inc/hw_gpio.h"
#include "driverlib/sysctl.h"
#include "driverlib/gpio.h"
#include "driverlib/debug.h"
#include "driverlib/pin_map.h"
#include "driverlib/fpu.h"
#include "driverlib/rom.h"
#include "driverlib/i2c.h"
#include "LSM9DS0_tiva.h"

void calLSM9DS0(float *gbias, float *abias)
{
  uint8_t data[6] = {0, 0, 0, 0, 0, 0};
  int16_t gyro_bias[3] = {0, 0, 0}, accel_bias[3] = {0, 0, 0};
  int samples, ii;

  // First get gyro bias
  uint8_t c = gReadByte(CTRL_REG5_G);
  gWriteByte(CTRL_REG5_G, c | 0x40);         // Enable gyro FIFO
  SysCtlDelay(270000);                       // Wait for change to take effect 20ms
  gWriteByte(FIFO_CTRL_REG_G, 0x20 | 0x1F);  // Enable gyro FIFO stream mode and set watermark at 32 samples
  SysCtlDelay(14000000);  					 // delay 1000 milliseconds to collect FIFO samples

  samples = (gReadByte(FIFO_SRC_REG_G) & 0x1F); // Read number of stored samples

  for(ii = 0; ii < samples ; ii++) {            // Read the gyro data stored in the FIFO

	data[0]= gReadByte(OUT_X_L_G);
	data[1]= gReadByte(OUT_X_H_G);

	data[2]= gReadByte(OUT_Y_L_G);
	data[3]= gReadByte(OUT_Y_H_G);

	data[4]= gReadByte(OUT_Z_L_G);
	data[5]= gReadByte(OUT_Z_H_G);

    gyro_bias[0] += (((int16_t)data[1] << 8) | data[0]);
    gyro_bias[1] += (((int16_t)data[3] << 8) | data[2]);
    gyro_bias[2] += (((int16_t)data[5] << 8) | data[4]);
  }

  gyro_bias[0] /= samples; // average the data
  gyro_bias[1] /= samples;
  gyro_bias[2] /= samples;

  gbias[0] = (float)gyro_bias[0]*gRes;  // Properly scale the data to get deg/s
  gbias[1] = (float)gyro_bias[1]*gRes;
  gbias[2] = (float)gyro_bias[2]*gRes;

  c = gReadByte(CTRL_REG5_G);
  gWriteByte(CTRL_REG5_G, c & ~0x40);  // Disable gyro FIFO
  SysCtlDelay(270000);
  gWriteByte(FIFO_CTRL_REG_G, 0x00);   // Enable gyro bypass mode


  //  Now get the accelerometer biases
  c = xmReadByte(CTRL_REG0_XM);
  xmWriteByte(CTRL_REG0_XM, c | 0x40);      // Enable accelerometer FIFO
  SysCtlDelay(270000);                      // Wait for change to take effect
  xmWriteByte(FIFO_CTRL_REG, 0x20 | 0x1F);  // Enable accelerometer FIFO stream mode and set watermark at 32 samples
  SysCtlDelay(14000000);   // delay 1000 milliseconds to collect FIFO samples

  samples = (xmReadByte(FIFO_SRC_REG) & 0x1F); // Read number of stored accelerometer samples

  for(ii = 0; ii < samples ; ii++) {          // Read the accelerometer data stored in the FIFO

	data[0]= xmReadByte(OUT_X_L_A);
    data[1]= xmReadByte(OUT_X_H_A);

    data[2]= xmReadByte(OUT_Y_L_A);
    data[3]= xmReadByte(OUT_Y_H_A);

    data[4]= xmReadByte(OUT_Z_L_A);
    data[5]= xmReadByte(OUT_Z_L_A);

    accel_bias[0] += (((int16_t)data[1] << 8) | data[0]);
    accel_bias[1] += (((int16_t)data[3] << 8) | data[2]);
    accel_bias[2] += (((int16_t)data[5] << 8) | data[4]) - (int16_t)(1./aRes); // Assumes sensor facing up!
  }

  accel_bias[0] /= samples; // average the data
  accel_bias[1] /= samples;
  accel_bias[2] /= samples;

  abias[0] = (float)accel_bias[0]*aRes; // Properly scale data to get gs
  abias[1] = (float)accel_bias[1]*aRes;
  abias[2] = (float)accel_bias[2]*aRes;

  c = xmReadByte(CTRL_REG0_XM);
  xmWriteByte(CTRL_REG0_XM, c & ~0x40);    // Disable accelerometer FIFO
  SysCtlDelay(270000);
  xmWriteByte(FIFO_CTRL_REG, 0x00);       // Enable accelerometer bypass mode
}

void initI2C(){

	    SysCtlPeripheralEnable(SYSCTL_PERIPH_I2C0);
	    SysCtlPeripheralReset(SYSCTL_PERIPH_I2C0);
	    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOB);

	    GPIOPinConfigure(GPIO_PB2_I2C0SCL);
	    GPIOPinConfigure(GPIO_PB3_I2C0SDA);

	    GPIOPinTypeI2CSCL(GPIO_PORTB_BASE, GPIO_PIN_2);
	    GPIOPinTypeI2C(GPIO_PORTB_BASE, GPIO_PIN_3);

	    // If false the data rate is set to 100kbps and if true the data rate will
	    // be set to 400kbps.
	    I2CMasterInitExpClk(I2C0_BASE, SysCtlClockGet(), false);

	    //clear I2C FIFOs
	    HWREG(I2C0_BASE + I2C_O_FIFOCTL) = 80008000;




}

void I2CwriteByte(uint8_t address, uint8_t subAddress, uint8_t data){

	// Tell the master module what address it will place on the bus when
	// communicating with the slave.
	I2CMasterSlaveAddrSet(I2C0_BASE, address, false); // write to bus
	I2CMasterDataPut(I2C0_BASE, subAddress);

	I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_SEND_START);
    while(I2CMasterBusy(I2C0_BASE));

    I2CMasterDataPut(I2C0_BASE, data);
    I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_SEND_FINISH);
 	while(I2CMasterBusy(I2C0_BASE));

}

uint8_t I2CreadByte(uint8_t address, uint8_t subAddress){


		I2CMasterSlaveAddrSet(I2C0_BASE, address, false);
		I2CMasterDataPut(I2C0_BASE, subAddress);

		I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_SINGLE_SEND);
		while(I2CMasterBusy(I2C0_BASE));

		I2CMasterSlaveAddrSet(I2C0_BASE, address, true);
		I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_SINGLE_RECEIVE);
		while(I2CMasterBusy(I2C0_BASE));

		return( I2CMasterDataGet(I2C0_BASE));

}

void I2CreadBytes(uint8_t address, uint8_t subAddress, uint8_t *dest, uint8_t count){

	I2CMasterSlaveAddrSet(I2C0_BASE, address, false);
	I2CMasterDataPut(I2C0_BASE, subAddress);

	I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_SEND_START);
	while(I2CMasterBusy(I2C0_BASE));

	I2CMasterSlaveAddrSet(I2C0_BASE, address, true);
    I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_RECEIVE_START);
    while(I2CMasterBusy(I2C0_BASE));

    dest[0] = I2CMasterDataGet(I2C0_BASE);

    if (count == 1){

    	I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_RECEIVE_FINISH);
        while(I2CMasterBusy(I2C0_BASE));

    }else{
        int i = 0;

        for( i=1 ; i< count; i++){

           	I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_RECEIVE_CONT);
           	while(I2CMasterBusy(I2C0_BASE));

            dest[i] = I2CMasterDataGet(I2C0_BASE);

         }

       	I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_RECEIVE_FINISH);
       	while(I2CMasterBusy(I2C0_BASE));

    }
    //send control byte and read from the register from the MCU
    I2CMasterControl(I2C0_BASE, I2C_MASTER_CMD_BURST_RECEIVE_FINISH);

    //wait for MCU to finish transaction
    while(I2CMasterBusy(I2C0_BASE));

}
